# task-tracker-kanban

./: .gitignore  README.md  docker-build.sh  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
backend/: app_initializer.py  settings.py
backend/application/: __init__.py
backend/domain/: __init__.py
backend/domain/models/: base.py
backend/infrastructure/: __init__.py
backend/infrastructure/dto/: user_post_dto.py
backend/infrastructure/routers/: users_router.py
backend/models/: __init__.py  base_model.py  comment.py  db_helper.py  label.py  labels_tasks_relations.py  task.py  user.py  users_tasks_relations.py
backend/repositories/: label.py  task.py  user.py
backend/routers/: label.py  task.py  user.py
backend/schemas/: label.py  task.py  user.py  userdto.py
backend/services/: authorization_service.py  hashing_service.py  jwt_token_service.py  label_service.py  task_service.py  user_service.py
dockerfiles/backend/: Dockerfile
dockerfiles/frontend/: Dockerfile
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js  Constants.js  index.js
frontend/src/components/Auth/: Auth.css  Login.js  Logout.js  Register.js
frontend/src/components/Home/: Home.js
frontend/src/components/KanbanBoard/: CommentElement.jsx  KanbanBoard.css  KanbanBoard.js  TaskElement.jsx
frontend/src/components/NavigationBar/: NavigationBar.js
